Fix topic lower case for kafka compability
Issue-ID: POLICY-4402
Change-Id: I0598bc83b5f4d46c79d7c5c897fd1e6e253b9238
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>